@@ -1,3 +1,11 @@
+2007-02-19  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/demo.py (Demo.re_stop): make dashes optional in demo
+	stop marks. 
+	(ClearingMixin): a simple mixin to easily make a Demo class clear
+	the screen in between blocks and have empty marquees. The
+	ClearDemo and ClearIPDemo classes that use it are included.
+
 2007-02-18  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/irunner.py (pexpect_monkeypatch): patch pexpect to
